// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Divider > rendrer riktig med default verdier 1`] = `
<DocumentFragment>
  <hr
    class="_divider_1adfb3"
  />
</DocumentFragment>
`;

exports[`Divider > rendrer riktig uten margin 1`] = `
<DocumentFragment>
  <hr
    class="_divider_1adfb3 _divider__NoMargin_1adfb3"
  />
</DocumentFragment>
`;
